test/rewriter/errors/pat_integer_literal_hex.ml
let invalid_integer_literal = function
  | [%yojson? 0xffffffffffffffffffffffffffffffffffffffffff] -> false
  | _ -> true
